Added remaining species for faction page

--- a/factions.html
+++ b/factions.html
@@ -25,7 +25,9 @@
         <br><br><br>
     </div>
 <div class="character-container">
-    <p class="lesser-title">Hognauts</p>
+    <p class="faction-title">HOGNAUTS</p>
+
+    <p class="lesser-title">Pigs</p>
     <div class="character">
         <img src="images/Hognaut.png" alt="Character 1">
         <div class="info-box">
@@ -37,7 +39,75 @@
             ensuring a constant stream of soldiers to fuel their conquests.</p>
         </div>
     </div>
-    <p class="lesser-title">AstroChimps</p>
+    <p class="lesser-title">Ducks</p>
+    <div class="character">
+        <img src="images/duck.png" alt="Character 7">
+        <div class="info-box">
+            <p>With their keen instincts and adaptable nature, the Ducks have pledged their loyalty to the Hognauts in their
+                quest
+                for galactic supremacy. These waterfowl, though not the smartest bunch, value cooperative behavior, thrive
+                in the
+                structured society established by the pig overlords. Drawn to the promise of security and prosperity offered
+                by the
+                Hognauts' regime, they eagerly contribute their skills to support the expansionist ambitions of their
+                allies.
+                Whether navigating the cosmos or tending to economic endeavors, they serve as steadfast support in the
+                Hognauts'
+                relentless pursuit of power.</p>
+        </div>
+    </div>
+    <p class="lesser-title">Dogs</p>
+    <div class="character">
+        <img src="images/dog.png" alt="Character 8">
+        <div class="info-box">
+            <p>Man's loyal companions have found a new allegiance among the Hognauts, drawn to the structured hierarchy and
+                sense of
+                belonging offered by the pig overlords. Dogs, with their unwavering loyalty and keen senses, serve as
+                valuable
+                assets in the Hognauts' military campaigns. Whether patrolling their masters' opulent estates or sniffing
+                out AstroChimp
+                insurgents, these canine warriors remain steadfast in their commitment to the Hognaut cause. In return for
+                their
+                service, they are rewarded with affection and protection, their status elevated within the ranks of Hognaut
+                society.</p>
+        </div>
+    </div>
+    <p class="lesser-title">Chickens</p>
+    <div class="character">
+        <img src="images/chicken.png" alt="Character 3">
+        <div class="info-box">
+            <p>When the Hognauts successfully replicated the ancient human smart-serum, the Chickens were the first the
+                first
+                to reap it's rewards, and for that, they will forever owe the Hognauts. Once simple barnyard fowl, the
+                Chickens have evolved into shrewd creatures with an affinity for luxury and comfort. Aligning
+                themselves with the Hognauts, they see in the pig's society an opportunity for indulgence and security. The
+                Hognauts'
+                opulent lifestyle appeals to their nature, and they gladly contribute their economical and agricultural
+                prowess to
+                sustain the lavish desires of their porcine overlords. In return for their loyalty, they are granted
+                protection and
+                privilege within the Hognaut hierarchy.</p>
+        </div>
+    </div>
+    <p class="lesser-title">Sheep</p>
+    <div class="character">
+        <img src="images/sheep.png" alt="Character 10">
+        <div class="info-box">
+            <p>Bred for obedience and loyalty, Sheep have found a comfortable existence among the Hognauts, embracing the
+                comforting
+                lifestyle. These woolly creatures, with their gentle disposition and cooperative
+                nature, thrive in the structured society established by the pigs. Content to graze in the lush pastures of
+                Hognaut-controlled worlds, they contribute their wool and labor to support the extravagant desires of their
+                masters. In
+                return for their servitude, they are granted protection and care within the sprawling estates of the Hognaut
+                elite,
+                their loyalty unwavering in the face of AstroChimp resistance.</p>
+        </div>
+    </div>
+
+    <p class="faction-title">ASTROCHIMPS</p>
+
+    <p class="lesser-title">Chimps</p>
     <div class="character">
         <img src="images/AstroChimp.png" alt="Character 2">
         <div class="info-box">
@@ -50,16 +120,21 @@
             galaxy, they strive to reclaim the legacy humanity left behind. </p>
         </div>
     </div>
-    <p class="lesser-title">Chickens</p>
+    <p class="lesser-title">Mice</p>
     <div class="character">
-        <img src="images/chicken.png" alt="Character 3">
+        <img src="images/mouse.png" alt="Character 5">
         <div class="info-box">
-            <p>When the Hognauts successfully replicated the ancient human smart-serum, the Chickens were the first the first
-            to reap it's rewards, and for that, they will forever owe the Hognauts. Once simple barnyard fowl, the Chickens have evolved into shrewd creatures with an affinity for luxury and comfort. Aligning
-            themselves with the Hognauts, they see in the pig's society an opportunity for indulgence and security. The Hognauts'
-            opulent lifestyle appeals to their nature, and they gladly contribute their economical and agricultural prowess to
-            sustain the lavish desires of their porcine overlords. In return for their loyalty, they are granted protection and
-            privilege within the Hognaut hierarchy.</p>
+            <p>Small but incredibly intelligent, Mice have pledged their allegiance to the AstroChimps in their fight
+                against the
+                Hognaut oppressors. Despite their diminutive size, these rodents possess keen intellects and a knack for
+                invention,
+                making them invaluable assets to the AstroChimp resistance. Utilizing their small stature to infiltrate
+                enemy
+                installations and access vital information, they play a crucial role in the guerrilla warfare tactics
+                employed by the
+                AstroChimps. Driven by a desire for freedom and justice, they scurry through the shadows, undermining
+                Hognaut control at
+                every opportunity.</p>
         </div>
     </div>
     <p class="lesser-title">Cats</p>
@@ -68,21 +143,22 @@
         <div class="info-box">
             <p>The sleek and cunning Cats have chosen to align themselves with the AstroChimps in their struggle against the
             Hognauts. These feline creatures, with their natural agility and predatory instincts, find camaraderie among the
-            resourceful chimps. Rejecting the opulence of the Hognauts' society, they instead seek adventure and freedom among the
+            resourceful chimps. Rejecting the structure of the Hognauts' society, they instead seek adventure and freedom among the
             stars. Serving as scouts and saboteurs for the AstroChimp resistance, they utilize their stealth and cunning to gather
             intelligence and disrupt Hognaut operations.</p>
         </div>
     </div>
-    <p class="lesser-title">Mice</p>
+    <p class="lesser-title">Cows</p>
     <div class="character">
-        <img src="images/mouse.png" alt="Character 5">
+        <img src="images/cow.png" alt="Character 9">
         <div class="info-box">
-            <p>Small but incredibly intelligent, Mice have pledged their allegiance to the AstroChimps in their fight against the
-            Hognaut oppressors. Despite their diminutive size, these rodents possess keen intellects and a knack for invention,
-            making them invaluable assets to the AstroChimp resistance. Utilizing their small stature to infiltrate enemy
-            installations and access vital information, they play a crucial role in the guerrilla warfare tactics employed by the
-            AstroChimps. Driven by a desire for freedom and justice, they scurry through the shadows, undermining Hognaut control at
-            every opportunity.</p>
+            <p>These gentle giants, have joined the ranks of the AstroChimp resistance in their
+                struggle against
+                the Hognauts. Cows, with their docile demeanor, have long felt under appreciated and taken advantage of within
+                the Hognaut societies. Rejecting the class based stucture of the pigs culture, they hold no value on status, and 
+                yearn for their own autonomy. Utilizing their strength and resilience, they provide vital support to the AstroChimp resistance,
+                serving as both asset protection and powerful warriors in the fight to reclaim Earth. In solidarity with their fellow sentient beings,
+                they stand against the tyranny of the Hognauts, determined to secure a better future for their kind.</p>
         </div>
     </div>
     <p class="lesser-title">Bunnies</p>
@@ -90,59 +166,13 @@
         <img src="images/bunny.png" alt="Character 6">
         <div class="info-box">
             <p>The Bunnies, with their adorable appearance belying their strategic minds, have sided with the AstroChimps in their rebellion against
-            the Hognauts. These agile creatures, bred for their intelligence and adaptability, find kinship with the resourceful
-            chimps. Rejecting the Hognauts' vision of galactic domination, they long for the untamed wilderness of Earth, now
-            ravaged by war. Utilizing their speed and agility, they serve as messengers and scouts for the AstroChimp resistance,
-            navigating treacherous terrain to relay vital information and evade Hognaut detection.</p>
+            the Hognauts. These agile creatures, strong in out-of-the-box strategic thinking, find kinship with the resourceful
+            chimps. Rejecting the Hognauts' vision of galactic domination, they long to return to a lost memory of Earth, now
+            ravaged by war. Utilizing their speed and agility in a cruiser just like on foot, they serve as messengers and scouts 
+            for the AstroChimp resistance, navigating treacherous zones, avoiding Hognaut detection to relay vital information when signals can't be sent.</p>
         </div>
     </div>
-    <p class="lesser-title">Ducks</p>
-    <div class="character">
-        <img src="images/duck.png" alt="Character 7">
-        <div class="info-box">
-            <p>With their keen instincts and adaptable nature, the Ducks have pledged their loyalty to the Hognauts in their quest
-            for galactic supremacy. These waterfowl, renowned for their intelligence and cooperative behavior, thrive in the
-            structured society established by the pig overlords. Drawn to the promise of security and prosperity offered by the
-            Hognauts' regime, they eagerly contribute their skills to support the expansionist ambitions of their porcine allies.
-            Whether navigating the cosmos or tending to agricultural endeavors, they serve as steadfast allies in the Hognauts'
-            relentless pursuit of power.</p>
-        </div>
-    </div>
-    <!-- <p class="lesser-title">Dogs</p>
-    <div class="character">
-        <img src="images/dog.png" alt="Character 8">
-        <div class="info-box">
-            <p>Man's loyal companions have found a new allegiance among the Hognauts, drawn to the structured hierarchy and sense of
-            belonging offered by the pig overlords. Dogs, with their unwavering loyalty and keen senses, serve as valuable
-            assets in the Hognauts' military campaigns. Whether patrolling their masters' opulent estates or sniffing out AstroChimp
-            insurgents, these canine warriors remain steadfast in their commitment to the Hognaut cause. In return for their
-            service, they are rewarded with affection and protection, their status elevated within the ranks of Hognaut society.</p>
-        </div>
-    </div>
-    <p class="lesser-title">Cows</p>
-    <div class="character">
-        <img src="images/cow.png" alt="Character 9">
-        <div class="info-box">
-            <p>These gentle giants, once mere livestock, have joined the ranks of the AstroChimp resistance in their struggle against
-            the Hognauts. Cows, with their docile demeanor and innate intelligence, have long suffered under the oppressive
-            rule of the pig overlords. Rejecting the exploitation and cruelty of the Hognauts' society, they yearn for freedom and
-            autonomy. Utilizing their strength and resilience, they provide vital support to the AstroChimp resistance, serving as
-            both laborers and warriors in the fight to reclaim Earth. In solidarity with their fellow sentient beings, they stand
-            against the tyranny of the Hognauts, determined to secure a better future for all.</p>
-        </div>
-    </div>
-    <p class="lesser-title">Sheep</p>
-    <div class="character">
-        <img src="images/sheep.png" alt="Character 10">
-        <div class="info-box">
-            <p>Bred for obedience and loyalty, Sheep have found a comfortable existence among the Hognauts, embracing the opulent
-            lifestyle afforded by their porcine overlords. These woolly creatures, with their gentle disposition and cooperative
-            nature, thrive in the structured society established by the pigs. Content to graze in the lush pastures of
-            Hognaut-controlled worlds, they contribute their wool and labor to support the extravagant desires of their masters. In
-            return for their servitude, they are granted protection and care within the sprawling estates of the Hognaut elite,
-            their loyalty unwavering in the face of AstroChimp resistance.</p>
-        </div>
-    </div> -->
+
 </div>
     <footer>
         <div class="footer-class">
