Fixed info-box slide out animation to return slide originated from same side

--- a/factions.html
+++ b/factions.html
@@ -26,7 +26,7 @@
         <br><br><br>
     </div>
 <div class="character-container">
-    <p class="faction-title">HOGNAUTS</p>
+    <p class="faction-title">🐷 HOGNAUTS 🐷</p>
 
     <p class="lesser-title">Pigs</p>
     <div class="character">
@@ -605,8 +605,8 @@
                 <span class="bar-stat">40</span>
             </div>
         </div>
-
-    <p class="faction-title">ASTROCHIMPS</p>
+    <br><br><br><br>
+    <p class="faction-title">🐵 ASTROCHIMPS 🐵</p>
 
     <p class="lesser-title">Chimps</p>
     <div class="character">
