Remade Register page from Play page. Added new fonts

--- a/factions.html
+++ b/factions.html
@@ -14,11 +14,12 @@
 
 <body>
     <header class="navbar">
-        <a href="index.html">Home</a>
-        <a href="play.html">Play</a>
-        <a href="factions.html">Factions</a>
-        <a href="community.html">Community</a>
-        <a href="shop.html">Shop</a>
+                <a href="index.html">Home</a>
+                <a href="factions.html">Factions</a>
+                <a href="register.html">Register</a>
+                <a href="./Quake3/Quake3Game.htm">Play</a>
+                <a href="#">Community</a>
+                <a href="#">Shop</a>
     </header>
     <div>
         <br><br><br><br>
