--- a/play.html
+++ b/play.html
@@ -13,15 +13,16 @@
 <body>
     <header>
         <a href="index.html">Home</a>
-        <a href="play.html">Play</a>
         <a href="factions.html">Factions</a>
-        <a href="community.html">Community</a>
-        <a href="shop.html">Shop</a>
+        <a href="register.html">Register</a>
+        <a href="./Quake3/Quake3Game.htm">Play</a>
+        <a href="#">Community</a>
+        <a href="#">Shop</a>
     </header>
     <div class="bg-img">
         <form action="/action_page.php" class="container">
             <h2 style="margin-bottom: 20px; text-align: center; color: #fff;
-                text-shadow: 0 0 30px #ff47c2, 0 0 50px #ff88f9;">Login</h2>
+                text-shadow: 0 0 30px #ff47c2, 0 0 50px #ff88f9;">Register for Early Access!</h2>
             
             <label for="email" style="color: #fff; text-shadow: 0 0 30px #ff47c2, 0 0 50px #ff88f9;">
                 <b>Email</b></label>
