--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ham Galaxy Portal</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,600,700&amp;lang=en"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"/>
     <script src="https://kit.fontawesome.com/9e4cb2d322.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,13 +14,14 @@
         <div class="banner-video">
             <video src="video/dna-background.mp4" autoplay="" muted="" loop=""></video>
         <div class="banner-text">
-            <h2 id="title-text">HAM GALAXY</h2>
+            <h2 id="title-text" style="font-size: 140px; font-family: 'Orbitron', sans-serif; font-weight:900;">HAM GALAXY</h2>
             <header class="navbar">
                 <a href="index.html">Home</a>
-                <a href="play.html">Play</a>
                 <a href="factions.html">Factions</a>
-                <a href="community.html">Community</a>
-                <a href="shop.html">Shop</a>
+                <a href="register.html">Register</a>
+                <a href="./Quake3/Quake3Game.htm">Play</a>
+                <a href="#">Community</a>
+                <a href="#">Shop</a>
             </header>
     </section>
     <section>
