Updated fonts again

--- a/factions.html
+++ b/factions.html
@@ -27,7 +27,7 @@
         <br><br><br>
     </div>
 <div class="character-container">
-    <p class="faction-title">🐷 HOGNAUTS 🐷</p>
+    <p class="faction-title">HOGNAUTS</p>
 
     <p class="lesser-title">Pigs</p>
     <div class="character">
@@ -607,7 +607,7 @@
             </div>
         </div>
     <br><br><br><br>
-    <p class="faction-title">🐵 ASTROCHIMPS 🐵</p>
+    <p class="faction-title">ASTROCHIMPS</p>
 
     <p class="lesser-title">Chimps</p>
     <div class="character">
