Changed some pics around, added a few style changes to registration page

--- a/factions.html
+++ b/factions.html
@@ -23,7 +23,7 @@
     </header>
     <div>
         <br><br><br><br>
-        <h1 class="story-title">FACTIONS</h1>
+        <h1 class="faction-page-title">FACTIONS</h1>
         <br><br><br>
     </div>
 <div class="character-container">
