Removed play.css and play.html files, added media queries to factions and index pages to support mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="banner-video">
             <video src="video/dna-background.mp4" autoplay="" muted="" loop=""></video>
         <div class="banner-text">
-            <h2 id="title-text" style="font-size: 140px; font-family: 'Orbitron', sans-serif; font-weight:900;">HAM GALAXY</h2>
+            <h2 id="title-text">HAM GALAXY</h2>
             <header class="navbar">
                 <a href="index.html">Home</a>
                 <a href="factions.html">Factions</a>
@@ -94,16 +94,14 @@
             </p>
         </div>
     </section>
-    <section>
-        <div class="container"">
-            <p class="lesser-title">HAM GALAXY - RISE OF THE HOGNAUTS<br><br></p>
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0XbXiK0Noe4?si=TGrMGhUj6Vq01LjX"
-                title="YouTube video player" frameborder="10" style="border: 1px solid #ff88f9; box-shadow: 0 0 20px rgba(255, 62, 239, 1);"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
-        </div>
-    </section>
+    <p class="lesser-title">HAM GALAXY - RISE OF THE HOGNAUTS</p>
+    <div class="container-youtube"">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0XbXiK0Noe4?si=TGrMGhUj6Vq01LjX"
+            title="YouTube video player" frameborder="10" style="border: 1px solid #ff88f9; box-shadow: 0 0 20px rgba(255, 62, 239, 1);"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+    </div>
     <script type="text/javascript">
         let video = document.querySelector('video');
         window.addEventListener('scroll' , function(){
