Minor content changes for story and species descriptions

--- a/factions.html
+++ b/factions.html
@@ -496,11 +496,10 @@
         <img src="images/sheep.png" alt="Character 10">
         <div class="info-box">
             <p>Bred for obedience and loyalty, Sheep have found a comfortable existence among the Hognauts, embracing the
-                comforting
-                lifestyle. These woolly creatures, with their gentle disposition and cooperative
-                nature, thrive in the structured society established by the pigs. Content to graze in the lush pastures of
-                Hognaut-controlled worlds, they contribute their wool and labor to support the extravagant desires of their
-                masters. In
+                relaxed
+                lifestyle in uncontested zones. These woolly creatures, with their gentle disposition and cooperative
+                nature, thrive in the structured society established by the pigs. Content to socialize in the lusher pastures of
+                Hognaut-controlled worlds, they contribute to and support the extravagant desires of the pigs with no complaints. In
                 return for their servitude, they are granted protection and care within the sprawling estates of the Hognaut
                 elite,
                 their loyalty unwavering in the face of AstroChimp resistance.</p>
