--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
                 a smart-serum, designed to accelerate cognitive development. However, their efforts appeared to be a colossal failure, 
                 as the expected results would not materialize for many years and in ways they never anticipated.
                 <br><br> 
-                Unknown to humanity, the serum had not failed entirely; rather, its effects were far subtler and much
-                slower than predicted. Unbeknownst to humans, this serum had indeed altered the genetic code of the test subjects,
-                setting in motion a transformation that would change the course of their subject's futures.
+                Unknown to humanity, the serum had not failed entirely; its effects were only subtler and far
+                slower than predicted. This serum had indeed altered the genetic code of the test subjects, it would just take additional 
+                generations to reveal itself. The seed of change was planted and it
+                set in motion a transformation that would alter the course of history.
                 <br><br>
                 As these serum-induced mutations manifested, the affected pigs and chimps began to exhibit signs of heightened
                 intelligence, gradually increasing with each new generation. Their cognitive abilities expanded at an astonishing rate, far
@@ -45,8 +46,8 @@
                 <br><br>
                 By the time humanity had reached its inevitable demise, leaving the Earth scarred and depleted, the descendants of those
                 experimentally altered pigs and chimps emerged as the new dominant species. The pigs, carrying the
-                genetic legacy of those initial experiments, now possessed an intellect akin to their past captors, while the AstroChimps, 
-                who had been sent into space during the cold war trials, had survived and similarly evolved and found new worlds to settle.
+                genetic legacy of those initial experiments, now possessed an intellect akin to their past captors, while the chimps, 
+                who had been sent into space during the cold war trials, had survived and similarly evolved, now thriving on distant worlds.
                 <br><br>
                 Same in nature, yet, so very different in nurture, the futures of these divergent kin would soon collide in a struggle 
                 mankind had never imagined...
