Refactored entire Home Page, and set aside story for later database page. Added new page and updated some formatting

--- a/factions.html
+++ b/factions.html
@@ -14,22 +14,20 @@
 
 <body>
     <header class="navbar">
-                <a href="index.html">Home</a>
-                <a href="factions.html">Factions</a>
-                <a href="register.html">Register</a>
-                <a href="./Quake3/Quake3Game.htm">Play</a>
-                <a href="#">Community</a>
-                <a href="#">Shop</a>
+        <a href="index.html">Home</a>
+        <a href="factions.html">Factions</a>
+        <a href="#">Database</a>
+        <a href="register.html">Register</a>
+        <a href="./Quake3/Quake3Game.htm">Play</a>
+        <a href="#">Shop</a>
     </header>
     <div>
-        <br><br><br><br>
         <h1 class="faction-page-title">FACTIONS</h1>
-        <br><br><br>
     </div>
-<div class="character-container">
-    <p class="faction-title">HOGNAUTS</p>
+    <div class="character-container">
+        <p class="faction-title">HOGNAUTS</p>
 
-    <p class="lesser-title">Pigs</p>
+        <p class="lesser-title">Pigs</p>
     <div class="character">
         <img src="images/Hognaut.png" alt="Character 1">
         <div class="info-box">
