--- a/register.html
+++ b/register.html
@@ -14,10 +14,10 @@
     <header class="navbar">
         <a href="index.html">Home</a>
         <a href="factions.html">Factions</a>
+        <a href="#">Database</a>
         <a href="register.html">Register</a>
         <a href="./Quake3/Quake3Game.htm">Play</a>
-        <a href="#">Community</a>
-        <a href="#">Shop</a>
+        <a href="#">Shop</a>  
     </header>
     <div class="register-header">
         <h1 class="register-title">Register for Early Access!</h1>
