--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
                 type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
         </div>
     </div>
-    <p style="color: rgb(190, 190, 190); font-family: 'Poppins', auto; text-align: center;">While you wait for Ham Galaxy, feel free to play some Quake 3!</p>
+    <p style="color: rgb(190, 190, 190); font-family: 'Poppins', auto; text-align: center;">While you wait for Ham Galaxy, feel free to play some <a href="./Quake3/Quake3Game.htm" class="quake3-submodule">Quake 3</a>!</p>
     <script>
         // Set the date we're counting down to
         var countDownDate = new Date("Oct 31, 2025 15:37:25").getTime();
