Linked registration page to Download Button. Corrected page title for index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sci-Fi MMORPG Game</title>
+    <title>Ham Galaxy Portal</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,600,700&amp;lang=en" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" />
@@ -74,7 +74,7 @@
                 </iframe>
             </div>
             <div class="cta-buttons">
-                <a href="#download" class="cta">Download Now</a>
+                <a href="register.html" class="cta">Download Now</a>
                 <a href="#donate" class="cta">Donate</a>
                 <a href="#learn-more" class="cta">Learn More</a>
             </div>
