Added ship color change for hover animations over clickable objs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="./images/HGlogo.png" alt="logo" class="logo">
         </nav>
 
-        <!-- adds screen reader only text for menu -->
+        <!-- adds screen-reader-only text for menu -->
         <button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
             <i class="fa-solid fa-bars"></i>
             <span class="sr-only">Menu</span>
@@ -54,7 +54,6 @@
             </ul>
         </nav>
     </header>
-    <!-- href="./Quake3/Quake3Game.htm" -->
     <section class="banner">
         <div class="banner-video">
             <video src="video/dna-background.mp4" autoplay muted loop></video>
