Added database page. Requires functionality still for links

--- a/factions.html
+++ b/factions.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="#">
+                    <a href="database.html">
                         <span aria-hidden="true">02</span>Database
                     </a>
                 </li>
