--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class="active">
-                    <a href="#">
+                    <a href="database.html">
                         <span aria-hidden="true">02</span>Database
                     </a>
                 </li>
