Added links to images in database, added hover effects to same images

--- a/database.html
+++ b/database.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Database</title>
+    <title>Ham Galaxy Portal</title>
     <link rel="stylesheet" href="database.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Poppins:300,400,600,700&amp;lang=en" />
@@ -62,28 +62,38 @@
         <section class="seasonal-topics">
             <h2>Seasonal Topics</h2>
             <div class="featured-guide">
-                <img src="images/HG Wallpaper Ultra Wide.png" alt="Beginner's Guide">
+                <a href="#">
+                    <img src="images/HG Wallpaper Ultra Wide.png" alt="Beginner's Guide">
+                </a>
                 <h3>Beginners Guide to Ham Galaxy</h3>
                 <p>by Ham Solo | Nov 2024</p>
             </div>
             <div class="guides-list">
                 <div class="guide">
-                    <img src="images/Pig-Shop.png" alt="Species Selection">
+                    <a href="#">
+                        <img src="images/Pig-Shop.png" alt="Species Selection">
+                    </a>
                     <h3>Species Selection</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
-                    <img src="images/Pig-Laser-Carbine.png" alt="Tech Repo">
+                    <a href="#">
+                        <img src="images/Pig-Laser-Carbine.png" alt="Tech Repo">
+                    </a>
                     <h3>Tech Repo</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
-                    <img src="images/Red-Fighter.png" alt="Enemy Codex">
+                    <a href="#">
+                        <img src="images/Red-Fighter.png" alt="Enemy Codex">
+                    </a>
                     <h3>Enemy Codex</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
                 <div class="guide">
-                    <img src="images/Chimp-Colony.png" alt="Story">
+                    <a href="#">
+                        <img src="images/Chimp-Colony.png" alt="Story">
+                    </a>
                     <h3>The Legend of Ham Galaxy</h3>
                     <p>by Ham Solo | Nov 2024</p>
                 </div>
@@ -93,15 +103,21 @@
             <h2>Hot Topics</h2>
             <div class="hot-topics-list">
                 <div class="topic">
-                    <img src="images/Hognaut.png" alt="Primer: Pigs">
+                    <a href="#">
+                        <img src="images/Hognaut.png" alt="Primer: Pigs">
+                    </a>
                     <h3>Primer: Pigs</h3>
                 </div>
                 <div class="topic">
-                    <img src="images/AstroChimp.png" alt="Primer: Chimps">
+                    <a href="#">
+                        <img src="images/AstroChimp.png" alt="Primer: Chimps">
+                    </a>
                     <h3>Primer: Chimps</h3>
                 </div>
                 <div class="topic">
-                    <img src="images/cat.png" alt="Primer: Cats">
+                    <a href="#">
+                        <img src="images/cat.png" alt="Primer: Cats">
+                    </a>
                     <h3>Primer: Cats</h3>
                 </div>
                 <!-- Add more topics as needed -->
