Added blur fade effect to left side of nav bar to soften edge

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="cta-buttons">
                 <a href="register.html" class="cta">Download Now</a>
                 <a href="#donate" class="cta">Donate</a>
-                <a href="#learn-more" class="cta">Learn More</a>
+                <a href="database.html" class="cta">Learn More</a>
             </div>
         </div>
     </section>
